# xiaozhi_v2

main/: CMakeLists.txt  Kconfig.projbuild  application.cc  application.h  idf_component.yml  mcp_server.cc
main/audio/: audio_codec.cc  audio_codec.h  audio_service.cc
main/audio/codecs/: no_audio_codec.cc  no_audio_codec.h
main/boards/common/: board.cc  board.h  esp32_music.cc  esp32_music.h  music.h
main/boards/custom-esp32s3-inmp441-max98357/: README.md  config.h  config.json  custom_emoji_display.cc  custom_emoji_display.h  custom_esp32s3_board.cc
main/boards/otto-robot/: Squint.h  Surprisedd.h  angry.h  awe.h  config.h  focused_detrmnined.h  furious.h  happy.h  neutral.h  otto_emoji_display.cc  otto_emoji_gif.h  otto_robot.cc  sad_loocking_down.h  scared.h
main/display/: lcd_display.cc
main/display/lvgl_display/: lvgl_display.cc
main/protocols/: protocol.h
partitions/v2/: 16m.csv  8m_large_ota.csv
